--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "dotenv": "^16.4.5",
     "express": "^4.19.1",
+    "firebase": "^10.9.0",
     "node-fetch": "^3.3.2",
     "winston": "^3.12.0"
   }
