--- a/package.json
+++ b/package.json
@@ -12,9 +12,13 @@
   },
   "dependencies": {
     "dotenv": "^16.4.5",
+    "email-validator": "^2.0.4",
     "express": "^4.19.1",
     "firebase": "^10.9.0",
+    "id-doc-validator": "^0.7.4",
     "node-fetch": "^3.3.2",
+    "phone": "^3.1.42",
+    "uuid": "^9.0.1",
     "winston": "^3.12.0"
   }
 }
